# tradeagentlab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  paper.yml
configs/: backtest.example.yaml
docs/: ROADMAP.md  example_report.md  latest_report.md
docs/agent/: example_decision.json  example_execution.json  latest_execution.json  latest_research.json  paper_execution.json  paper_research.json
docs/daily/: 2026-02-03.md  2026-02-04.md  2026-02-05.md  2026-02-06.md  2026-02-07.md  2026-02-08.md  2026-02-09.md  2026-02-10.md  2026-02-11.md  2026-02-12.md  2026-02-13.md  2026-02-14.md  2026-02-15.md  2026-02-16.md  2026-02-17.md  2026-02-18.md  2026-02-19.md  2026-02-20.md  2026-02-21.md  2026-02-22.md  2026-02-23.md  2026-02-24.md  2026-02-25.md  2026-02-26.md  2026-02-27.md  2026-02-28.md  2026-03-02.md  2026-03-03.md  2026-03-04.md  2026-03-05.md  2026-03-06.md  2026-03-07.md  2026-03-08.md  2026-03-09.md  2026-03-10.md  2026-03-11.md  2026-03-12.md  2026-03-13.md  2026-03-14.md  2026-03-15.md  (+126 more)
src/tradeagentlab/: cli.py
src/tradeagentlab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tradeagentlab/agents/: orchestrator.py  research.py  risk_gate.py  schema.py  signal.py
src/tradeagentlab/backtest/: runner.py
src/tradeagentlab/data/: yf.py
src/tradeagentlab/features/: tech.py
src/tradeagentlab/paper/: run.py
src/tradeagentlab/report/: basic.py
src/tradeagentlab/risk/: engine.py
tests/: test_smoke.py
