[project]
name = "tradeagentlab"
version = "0.1.0"
description = "Agent+ML US equities research/backtest/paper-trading lab"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jiating" }]
license = { text = "MIT" }
dependencies = [
  "pandas>=2.2",
  "numpy>=2.0",
  "yfinance>=0.2.54",
  "pyarrow>=15.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "scikit-learn>=1.4",
  "plotly>=5.20",
  "kaleido>=0.2.1",
  "rich>=13.7",
  "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4.0",
  "mypy>=1.8",
  "pre-commit>=3.6",
]
llm = [
  "openai>=1.40.0",
]

[project.scripts]
tal = "tradeagentlab.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
